--- a/Source/ansic/Makefile.in
+++ b/Source/ansic/Makefile.in
@@ -97,7 +97,7 @@ gencharset_SOURCES = gencharset.cpp
 
 gencharset_CXXFLAGS = \
 	@SVGALIB_CFLAGS@ \
-	-Wall -pedantic -Wwrite-strings -Wstrict-prototypes
+	-Wall -Wwrite-strings -Wstrict-prototypes
 
 
 gencharset_LDADD = 
@@ -155,7 +155,7 @@ blassic_SOURCES = \
 
 blassic_CXXFLAGS = \
 	@SVGALIB_CFLAGS@ \
-	-Wall -pedantic -Wwrite-strings -Wstrict-prototypes
+	-Wall -Wwrite-strings -Wstrict-prototypes
 
 
 # Julian:
